# lego-hkm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TC-beaglebone-black.cmake  blend.py  board-toolchain.cmake  build_docker_image.sh  cross-compile.sh  path-visualisation.py
device-tree/: mod-robotcape.dts
include/: IMotion.hpp  calibration.hpp  client.hpp  custom_pathfinding.hpp  eigen_kinematics.hpp  juliet_comms.hpp  lego_model.hpp  mark2_0_fixed.hpp  motors.h  motors.hpp  ompl_pathfinding.hpp  options.hpp  path_finding.h  path_finding.hpp  pathfinding.hpp  robot.h  robot.hpp  robot_config.h  robot_config.hpp  spacial_conv.h  test_helpers.hpp
include/math/: 3d_circle.hpp
libs/: IK-lib
libs/IK-lib/: CMakeLists.txt  HKM1800.c  HKM1800.h  HKM1800_id.c  HKM1800_id.h  Makefile  agile_wrapper.py  ax4_kinematics.c  ax4_kinematics.h  bench_dyn.c  bench_vel_acc_calc.c  calibrated_kinematics.c  calibrated_kinematics.h  concept_prototype.c  concept_prototype.h  dyn.c  dyn.h  kin_model.c  kin_model.h  kin_model_long.c  kin_model_long.h  kinematics.c  kinematics.h  mark1_5.c  mark1_5.h  mark1_5_lpoe.c  mark1_5_lpoe.h  mark2_0.c  mark2_0.h  mark2_0_calib.c  mark2_0_calib.h  mark2_0_lpoe.c  mark2_0_lpoe.h  mark2_0_perturbed.c  mark2_0_perturbed.h  myalloc.c  myalloc.h  test.c  test_ax3_stiffness_mark2_0.c  test_calib_kin_mark2_0.c  (+14 more)
libs/IK-lib/c_lpoe/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  lpoe.c  lpoe.h  lpoe_wrapper.py  matrix_math.c  matrix_math.h  requirements.txt  test_lpoe.c  test_matrix_math.c
libs/IK-lib/ckin/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  common.c  common.h  common.su  debug.h  dh.c  dh.h  example_params.c  example_params.h  kin_skel.c  kin_skel.h  kin_skel_trace.c  kin_wrapper.py  lin_alg.c  lin_alg.h  lin_alg.su  lpoe.h  lpoe_invkin.c  lpoe_invkin.h  setup.py  test_common.c  test_dh.c  test_inv.c  test_kin_skel.py  test_lin_alg.c  test_lpoe_invkin.c  test_time.c
libs/IK-lib/ckin/c_lpoe/: .gitlab-ci.yml  lpoe.c  lpoe.h  lpoe_wrapper.py  matrix_math.c  matrix_math.h  setup.py  test_lpoe.c  test_matrix_math.c
src/: CMakeLists.txt  IMotion.cpp  board_main.cpp  client.cpp  custom_pathfinding.cpp  dev_main.cpp  eigen_kinematics.cpp  juliet_comms.cpp  lego_model.cpp  lego_robot.cpp  main.cpp  mark2_0_fixed.cpp  motorcontrol.cpp  motors.cpp  ompl_pathfinding.cpp  path_finding.cpp  robot.cpp  robot_thread.cpp  spacial_conv.cpp  test_helpers.cpp  trajectory_planner.cpp
src/calibration/: calibration_parsing.cpp  calibration_program.cpp
src/chan-gen-types/: CMakeLists.txt  regen.sh
src/chan-gen-types/defs/: motion_types.jl
src/jogging/: jogging_program.cpp
src/juliet-server/src/: .gitignore  main.jlt  server.jlt
src/lego/: lego_model.cpp  lego_robot.cpp  motors.cpp
src/math/: 3d_circle.cpp
src/visualisation-integration/: CMakeLists.txt  jl_emulation.cpp  vis_robot.cpp
tests/: 3d_circle_points.cpp  CMakeLists.txt  calibration_parse_test.cpp  coord_test.cpp  custom_pathfinding_test.cpp  custom_pathfinding_vis.py  custom_pathfinding_vis_test.cpp  julia_comm_server_test.cpp  julia_communication_test.cpp  vis_control_test.cpp
